@@ -83,7 +83,8 @@ public class ProviderFileLoader implements ProviderLoader {
                                     // reflection later to create instances of the class.
                                     // Add the provider to the map.
                                     if (IQProvider.class.isAssignableFrom(provider)) {
-                                        iqProviders.add(new IQProviderInfo(elementName, namespace, (IQProvider<IQ>) provider.newInstance()));
+                                        IQProvider<IQ> iqProvider = (IQProvider<IQ>) provider.getConstructor().newInstance();
+                                        iqProviders.add(new IQProviderInfo(elementName, namespace, iqProvider));
                                     }
                                     else {
                                         exceptions.add(new IllegalArgumentException(className + " is not a IQProvider"));
@@ -96,7 +97,9 @@ public class ProviderFileLoader implements ProviderLoader {
                                     // then we'll use reflection later to create instances
                                     // of the class.
                                     if (ExtensionElementProvider.class.isAssignableFrom(provider)) {
-                                        extProviders.add(new ExtensionProviderInfo(elementName, namespace, (ExtensionElementProvider<ExtensionElement>) provider.newInstance()));
+                                        ExtensionElementProvider<ExtensionElement> extensionElementProvider = (ExtensionElementProvider<ExtensionElement>) provider.getConstructor().newInstance();
+                                        extProviders.add(new ExtensionProviderInfo(elementName, namespace,
+                                                        extensionElementProvider));
                                     }
                                     else {
                                         exceptions.add(new IllegalArgumentException(className
@@ -104,9 +107,10 @@ public class ProviderFileLoader implements ProviderLoader {
                                     }
                                     break;
                                 case "streamFeatureProvider":
+                                    ExtensionElementProvider<ExtensionElement> streamFeatureProvider = (ExtensionElementProvider<ExtensionElement>) provider.getConstructor().newInstance();
                                     sfProviders.add(new StreamFeatureProviderInfo(elementName,
                                                     namespace,
-                                                    (ExtensionElementProvider<ExtensionElement>) provider.newInstance()));
+                                                    streamFeatureProvider));
                                     break;
                                 default:
                                     LOGGER.warning("Unknown provider type: " + typeName);
